      in this case
  * softwarecenter/view/appdetailsview_gtk.py:
    - remove explicit "progress.set_fraction()" in configure() because
      its not needed (gtk.ProgressBar will DTRT) and also we may get
      "xapian reopen" signals in the middle of a transaction, in this
      case we don't want to reset the progress. 

  [ Kiwinote ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - don't eat 'o ' character combinations within bullet points (LP: #646822)
      (test case: software-center deja-dup)
    - scale icon down when setting 'where is it' icon from path (LP: #645062)
      (test case: software-center briquolo (once installed))
  * softwarecenter/view/availablepane.py:
    - don't show 'hide 1 technical item' in featured category (LP: #???)
      (test case: browse to featured category (by clicking 'all'))
    - don't show 'hide technical items' in system category, as we don't
      have any apps to show (LP: #???)
      (test case: browse to 'System' category)
  * softwarecenter/view/softwarepane.py:
    - don't offer to 'show 9k items' in searches, as we limit searches to 200
      items (LP: #648988)
      (test case: software-center search:library)

 -- Gary Lasker <gary.lasker@canonical.com>  Thu, 23 Sep 2010 16:38:35 -0400

software-center (3.0.1) maverick; urgency=low

  [ Michael Vogt ]
  * softwarecenter/db/update.py:
    - index the file even if "catalogedtime" is not yet written
      to /var/lib/apt-xapian-index/values (LP: #646018)
  * softwarecenter/view/purchasedialog.py:
    - set default window size to 640x400 (LP: #635215)
  
  [ Gary Lasker ]
  * softwarecenter/view/appdetailsview_gtk.py:
    - fix crash if iconname has no value (LP: #639934) 
  * softwarecenter/view/viewswitcher.py:
    - fix intermittent crash when using arrow keys to
      expand/collapse nodes in the left nav pane (LP: #644176) 

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 24 Sep 2010 22:35:42 +0200

software-center (3.0) maverick; urgency=low
